# RustClaw

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LISENCE  README.ko.md  README.md
container/codex-agent-runner/: Dockerfile  entrypoint.sh  package-lock.json  package.json  tsconfig.json
container/codex-agent-runner/src/: index.ts  ipc-mcp-stdio.ts
docs/reference-analysis/: automaton-analysis.md  nanoclaw-analysis.md  nanoclaw-exact-clone-plan.md  nanoclaw-gap-checklist.md  openclaw-analysis.md
docs/systemd/: rust-claw.service
groups/global/skills/skill-creator/: SKILL.md
groups/main/btc-regime-allocator/: SKILL.md
groups/main/btc-regime-allocator/references/: index_universe.md  output_format.md  rss_sources.md
groups/main/skills/btc-regime-allocator/agents/: openai.yaml
groups/main/skills/btc-regime-allocator/references/: scoring_policy.md
scripts/: install-systemd-service.sh
src/: agent_runner_command.rs  agent_runner_container.rs  channel_outbound.rs  command_executor.rs  container_runner.rs  cron_schedule.rs  db.rs  discord_channel.rs  env_file.rs  group_queue.rs  inbound_bridge.rs  ipc_watcher.rs  lib.rs  main.rs  mount_security.rs  orchestrator.rs  outbound_command.rs  router.rs  skill_loader.rs  state_migration.rs  task_scheduler.rs  types.rs  upbit_broker.rs
tests/: parity_cli_defaults.rs
